--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -45,6 +45,8 @@ body{
     height: 50px;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--black);
+    z-index: 2;
 }
 
 .product-toggler-container{
@@ -105,8 +107,8 @@ body{
     top:0;
     position: sticky;
     width: 100%;
-    transition: all 1s;
-    z-index: 2;
+    transition: all 2s;
+    z-index: 5;
     background-color: var(--black);
 }
 
@@ -156,9 +158,17 @@ body{
 /* description bar style */
 @keyframes slideTopToBottom {
     0%{
-        top: -40px;
+        top: -50px;
+        display: none;
+    }
+    50%{
+        display: none;
+    }
+    80%{
+        display: none;
     }
     100%{
+       display: block;
        top: 0px;
     }
 }
@@ -168,7 +178,7 @@ body{
     padding: 15px 20px;
     text-align: center;
     background-color: var(--dark-gray);
-    animation: slideTopToBottom 1s linear;
+    animation: slideTopToBottom 500ms linear;
     transition: all 2s;
     z-index: 1;
 }
@@ -215,3 +225,648 @@ body{
         display: block;
     }
 }
+
+@media screen and (max-width:550px) {
+    .desc-bar{
+        display: none;
+    }
+}
+
+/* First video section styling */
+
+@keyframes bannerOverlaySlider {
+    0%{
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateX(0px);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+}
+
+.banner-text{
+    text-align: center;
+    color: var(--large-text-condensed-gray);
+    margin: 30px;
+    height: 120px;
+    overflow: hidden;
+    position: relative;
+}
+
+.banner-text-overlay{
+    position: absolute;
+    top: 0;
+    height: 120px;
+    width: 100%;
+    background-color: var(--black);
+    animation: bannerOverlaySlider 3500ms forwards linear;
+    animation-delay: 2s;
+} 
+
+.banner-small-text{
+    margin: 10px;
+}
+
+.banner-large-text{
+    margin: 5px;
+    font-size: 80px;
+}
+
+@keyframes videoPositioner {
+    0%{
+        transform: translateY(-70px);
+    }
+    25%{
+        transform: translateY(-70px);
+    }
+    50%{
+        transform: translateY(-70px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+.video-container{
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    top: -20px;
+    animation: videoPositioner 5s forwards;
+    transition: all 5s;
+}
+
+.video-element{
+    top: -30px;
+    width: 100%;
+    position: relative;
+    left: 50%;
+    transform: translate(-35%);
+}
+
+.banner-below-text{
+    color: var(--medium-text-condensed-gray);
+    width: 600px;
+    max-width: 100%;
+    margin: auto;
+    text-align: center;
+    font-size: 22px;
+    line-height: 1.4;
+}
+
+.banner-below-text-desc{
+    margin:50px 20px;
+}
+
+.banner-below-text-offer{
+    margin: 20px;
+}
+
+.watch-text-film{
+    margin: 40px 20px;
+}
+
+.watch-text-film a{
+    color: var(--white);
+}
+
+.watch-text-film a img{
+    position: relative;
+    top: 7px;
+}
+
+@media screen and (max-width:1024px) {
+    .banner-text{
+        margin: 40px;
+    }
+
+    .banner-small-text{
+        font-size: 21px;
+    }
+    
+    .banner-large-text{
+        font-size: 80px;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .banner-small-text{
+        margin: 10px;
+    }
+    
+    .banner-large-text{
+        font-size: 70px;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+
+    .video-element{
+        top: -20px;
+    }
+
+    .banner-below-text{
+        text-align: left;
+    }
+}
+
+@media screen and (max-width:550px) {
+
+    .banner-text{
+        height: 90px;
+        margin-bottom: 0;
+    }
+
+    .banner-small-text{
+        font-size: 16px;
+    }
+    
+    .banner-large-text{
+        font-size: 50px;
+        margin: 0;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+
+    .video-element{
+        top: 0px;
+    }
+}
+
+@media screen and (max-width:414px) {
+
+    .banner-text{
+        height: 90px;
+        margin-bottom: 0;
+    }
+
+    .banner-small-text{
+        font-size: 15px;
+    }
+    
+    .banner-large-text{
+        font-size: 40px;
+        margin: 0;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+
+    .video-element{
+        top: 0px;
+    }
+}
+
+
+@media screen and (max-width:360px) {
+
+    .banner-text{
+        height: 80px;
+        margin-bottom: 0;
+    }
+
+    .banner-small-text{
+        font-size: 14px;
+    }
+    
+    .banner-large-text{
+        font-size: 40px;
+        margin: 0;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+
+    .video-element{
+        top: 0px;
+    }
+}
+
+@media screen and (max-width:320px) {
+
+    .banner-text{
+        height: 70px;
+        margin-top: 20px;
+    }
+
+    .banner-small-text{
+        font-size: 10px;
+    }
+    
+    .banner-large-text{
+        font-size: 30px;
+        margin: 0;
+    }
+
+    .video-container{
+        top: 0px;
+    }
+
+    .video-element{
+        top: 0px;
+    }
+}
+
+/* First video section styling end */
+
+/* Bezel section styles */
+
+.bezel-section-wrapper{
+    margin-top: 200px;
+}
+
+.bezel-section-text{
+    position: relative;
+    color: var(--white);
+    margin:50px 20px 50px 20px;
+    text-align:center;
+}
+
+.bezel-section-img{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+@media screen and (max-width:768px) {
+    .bezel-section-img img{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width:540px) {
+    .bezel-section-img img{
+        width: 100%;
+        position: relative;
+        left: 10%;
+    }
+
+    .bezel-section-text{
+       font-size: 35px;
+       text-align: left;
+    }
+}
+
+/* Bezel section styles end */
+
+/* Super retina section styles */
+
+.super-retina-section{
+    margin-top: 200px;
+}
+
+.super-retina-container{
+    display: flex;
+    justify-content: center;
+}
+
+.retina-text{
+    color: var(--white);
+}
+
+.super-retina-img{
+    margin:50px 100px;
+}
+
+
+.super-retina-img video{
+    height: 650px
+}
+
+.super-retina-specs{
+    font-size: 16px;
+    color: var(--medium-text-condensed-gray);
+    line-height: 1.4;
+    position: relative;
+    top: 500px;
+}
+
+.super-retina-specs-below-container{
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+.super-retina-specs-below{
+    font-size: 16px;
+    color: var(--medium-text-condensed-gray);
+    line-height: 1.4;
+    position: relative;
+    margin:50px 20px;
+}
+
+.super-retina-specs-one{
+    text-align: right;
+}
+
+.super-retina-specs-two{
+    text-align: left;
+}
+
+.retina-btn-container{
+    display: flex;
+    justify-content: center;
+}
+
+.retina-btn{
+    font-size: 18px;
+    padding: 7px 10px;
+    color: var(--white);
+    background-color: transparent;
+    border: 1px solid var(--white);
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.retina-btn:hover{
+    background-color: var(--white);
+    color: var(--dark-gray);
+}
+
+@media screen and (max-width:930px) {
+    .super-retina-specs{
+        display: none;
+    }
+
+    .super-retina-img{
+        margin:50px 0;
+    }
+
+    .super-retina-specs-below-container{
+        display: flex;
+    }
+}
+/* Super retina section styles end  */
+
+
+/* Ceramic glass section style */
+
+.ceramic-glass-container{
+    margin: 200px 0;
+}
+
+.ceramic-glass-heading{
+    color: var(--white);
+    text-align: center;
+    margin: 100px 0;
+}
+
+.ceramic-glass-img{
+    margin: 40px;
+    overflow: hidden;
+}
+
+.ceramic-glass-img img{
+    width: 100%;
+}
+
+.gradient-text{
+    color: transparent;
+    background-image: linear-gradient(to right, #005e7f, #61b6cd);
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+.ceramic-glass-text{
+    text-align: center;
+    font-size: 32px;
+    margin: 40px 0;
+}
+
+.ceramic-glass-btn{
+    display: flex;
+    justify-content: center;   
+}
+
+.ceramic-glass-btn button{
+    color: var(--apple-icon-condensed-gray);
+    font-size: 18px;   
+    padding: 7px 15px;
+    background-color: transparent;
+    cursor: pointer;
+    border: 2px solid; 
+    border-right-color: #61b6cd;
+    border-top-color: #61b6cd;
+    border-bottom-color: #005e7f;
+    border-left-color: #005e7f;
+    border-radius: 25px;   
+}
+
+.ceramic-glass-btn button:hover{
+    background-color: var(--medium-text-condensed-gray);
+    color: var(--dark-gray);
+    border: 2px solid var(--medium-text-condensed-gray);
+}
+
+.ceramic-glass-toggle-lg{
+    display: block;
+}
+
+.ceramic-glass-toggle-sm{
+    display: none;
+}
+
+.ceramic-glass-toggle-sm{
+    margin: 20px;
+}
+
+.ceramic-glass-toggle-sm-text-container{
+    position: relative;
+    top: -180px;
+}
+
+.ceramic-glass-heading-sm{
+    font-size: 35px;
+    color: var(--white);
+}
+
+.ceramic-glass-text-sm{
+    font-size: 30px;
+    line-height:1.25;
+    margin-top: 25px;
+}
+
+.ceramic-glass-btn-sm button{
+    color: var(--apple-icon-condensed-gray);
+    font-size: 18px;   
+    padding: 7px 15px;
+    cursor: pointer;
+    border: 2px solid; 
+    background-color: transparent;
+    border-right-color: #61b6cd;
+    border-top-color: #61b6cd;
+    border-bottom-color: #005e7f;
+    border-left-color: #005e7f;
+    border-radius: 25px;
+    margin: 20px 0;
+}
+
+.ceramic-glass-btn-sm button:hover{
+    background-color: var(--medium-text-condensed-gray);
+    color: var(--dark-gray);
+    border: 2px solid var(--medium-text-condensed-gray);
+}
+
+@media screen and (max-width:700px) {
+    .ceramic-glass-toggle-sm{
+        display: block;
+    }
+    
+    .ceramic-glass-toggle-lg{
+        display: none;
+    } 
+    
+    .ceramic-glass-img{
+        margin:0 0 0 20px;
+    }
+
+    .ceramic-glass-container{
+        margin: 100px 0 0 0;
+    }
+}
+
+/* Ceramic glass section end */
+
+/* Surgical grade section style */
+
+.surgical-grade-wrapper{
+    position: relative;
+}
+
+.surgical-grade-container{
+    position: relative;
+    height: 1200px;
+    width: 100%;
+}
+
+.surgical-grade-img{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.surgical-grade-img img{
+    height: 1200px;
+}
+
+.surgical-grade-heading{
+    color: var(--white);
+    transform: rotate(90deg);
+}
+
+.surgical-grade-heading-left{
+    position: absolute;
+    top: 150px;
+    left: 20%;
+}
+
+.surgical-grade-heading-right{
+    position: absolute;
+    bottom: 150px;
+    right: 20%;
+}
+
+@media screen and (max-width:1024px){
+    .surgical-grade-heading-left{
+        left: 10%;
+    }
+    
+    .surgical-grade-heading-right{
+        right: 10%;
+    }
+}
+
+@media screen and (max-width:768px){
+    .surgical-grade-heading{
+        font-size: 40px;
+    }
+
+    .surgical-grade-heading-left{
+        left: 5%;
+    }
+    
+    .surgical-grade-heading-right{
+        right: 5%;
+    }
+}
+
+@media screen and (max-width:650px){
+    .surgical-grade-heading{
+        font-size: 40px;
+    }
+
+    .surgical-grade-heading-left{
+        left: -40px;
+    }
+    
+    .surgical-grade-heading-right{
+        right:-40px;
+    }
+
+    .surgical-grade-img img{
+        height: 800px;
+    }
+
+    .surgical-grade-container{
+        height: 800px;
+    }
+}
+
+
+@media screen and (max-width:360px){
+    .surgical-grade-heading{
+        font-size: 40px;
+    }
+
+    .surgical-grade-heading-left{
+        left: -70px;
+    }
+    
+    .surgical-grade-heading-right{
+        right:-70px;
+    }
+
+    .surgical-grade-img img{
+        height: 800px;
+    }
+
+    .surgical-grade-container{
+        height: 800px;
+    }
+}
+
+/* Surgical grade section style end */
+
+/* Water resistance section style */
+
+.water-resistance-container{
+    overflow: hidden;
+    margin: 300px 0;
+}
+
+.water-resistance-img img{
+    width: 80%;
+    position: relative;
+    left: 20%;
+}
+
+@media screen and (max-width:450px) {
+    .water-resistance-container{
+        margin: 0 0 100px 0;
+    }
+}
+
+/* Water resistance section style end */
